if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
  set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
else()
  set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
endif()
include_directories (${PROJECT_SOURCE_DIR}/src/core ${PROJECT_SOURCE_DIR}/src/matrix/io)
add_library (core Params.hpp Queue.hpp Queue.cpp ReconContext.hpp ReconContext.cpp Toolbox.hpp Toolbox.cpp Workspace.hpp Workspace.cpp)
if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
  target_link_libraries (core dl)
endif()
