noinst_LTLIBRARIES = libcore.la 
AM_CXXFLAGS=-DTIXML_USE_STL -I$(top_srcdir)/src/tinyxml -I$(top_srcdir)/src/matrix -I$(top_srcdir)/src/matrix/io -I$(top_srcdir)/src/matrix/simd -I$(top_srcdir)/src/misc
libcore_la_SOURCES = Params.hpp Queue.hpp Queue.cpp ReconContext.hpp ReconContext.cpp Toolbox.hpp Toolbox.cpp Workspace.hpp Workspace.cpp 

